# goal-tracker

./: .gitignore  .pylintrc  Makefile  README.md  alembic.ini  mypy.ini  pyproject.toml
goal-tracker-front/: package-lock.json  package.json
goal-tracker-front/src/: App.tsx
goal_tracker/: app.py  db.py  models.py  settings.py
migrations/: env.py
migrations/versions/: 2022_06_23_1137-12a80f78ad0b_add_goal_and_goalprogress_table.py
tests/: test_goal_tracker.py
